# Motor-originac-srm

./: .env.example  .gitignore  .mcp.json  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
backend/: .env.paperclip-sidecar.example  Dockerfile.paperclip-runtime-sidecar  Dockerfile.paperclip-sidecar  README.md  README.paperclip-sidecar.md  alembic.ini  package.json  pyproject.toml  railway.paperclip-runtime.json  railway.paperclip.json  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20260318_0001_v7_core_tables.py
backend/app/: __init__.py  main.py  server.py
backend/app/api/: dependencies.py  routes.py
backend/app/core/: config.py
backend/app/domain/: models.py
backend/app/models/: __init__.py  company.py  market_map_card.py  monitoring_output.py  score_history.py  thesis_output.py
backend/app/repositories/: company_repository.py  market_map_repository.py  memory.py  monitoring_repository.py  score_history_repository.py  thesis_repository.py
backend/app/schemas/: common.py  company.py  market_map.py  (+6 more)
backend/examples/: mvpIntelligenceSnapshot.curl.sh  mvpPersistenceBootstrap.curl.sh  mvpPersistenceBootstrap.payload.json
backend/fastapi/: __init__.py  testclient.py
backend/patches/: server.registerMvpPersistenceBootstrap.patch  server.registerMvpRoutes.patch
backend/src/: server.paperclip.runtime.ts  server.paperclip.ts  server.ts
backend/tests/: conftest.py  test_api.py  test_ranking_v2.py  test_thesis_persistence.py
(+433 files in other folders)
