[project]
name = "origination-intelligence-platform-v7"
version = "0.1.0"
description = "Origination Intelligence Platform V7 backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.34,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.10,<3.0",
  "alembic>=1.14,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
